# kevdev.api

./: .env  .gitignore  Cargo.toml  README.md  http-statuscodes.md  rust-toolchain.toml
migrations/2023-11-10-022048_create_todos/: up.sql
migrations/2023-11-15-045035_create_users/: up.sql
migrations/2023-11-15-045108_create_blog_posts/: up.sql
migrations/2023-11-15-045152_create_blog_comments/: down.sql  up.sql
src/: auth.rs  cli.rs  db.rs  error_handler.rs  handler.rs  lib.rs  main.rs  model.rs  models.rs  response.rs  route.rs  schema.rs
src/models/: blog_comments.rs  mod.rs  todo.rs  user.rs
src/xxxbin/: complete_todo.rs
