[package]
name = "kevdev_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }

dotenvy = "0.15"
diesel = { version = "2.1.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.1.0"
env_logger = "0.10.0"
lazy_static = "1.4"
#listenfd = "1.0.1"
r2d2 = "0.8"
error-chain = "0.12.4"
anyhow = "1.0.75"
argon2 = "0.5.2"
clap = "4.4.8"


#[[bin]]
#name = "show_todos"
#doc = false
#
#[[bin]]
#name = "write_todo"
#doc = false
#
#[[bin]]
##name = "delete_todo"
##doc = false
#
#[[bin]]
##name = "complete_todo"
##doc = false
#
##[lib]
##doc = false
